--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <body>
     <h1>About Me</h1>
     <p>This is my personal introduction page.</p>
-    <a href="/index">Home</a>
+    <a href="/index.html">Home</a>
 </body>
 </html>
 <head>
