--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
     <div>
         <h1>Welcome to My Site</h1>
-        <a href="/about">About Me</a>
+        <a href="/about.html">About Me</a>
     </div>
 </body>
 </html>
