--- a/index.html
+++ b/index.html
@@ -3,44 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>My Site</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        h1 {
-            font-size: 3em;
-            background: linear-gradient(270deg, #ff0000, #00ff00, #0000ff);
-            background-size: 600% 600%;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            animation: wave 10s ease infinite;
-        }
-        @keyframes wave {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-        a {
-            text-decoration: none;
-            color: #007BFF;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">  <!-- CSS 파일 링크 -->
+    <script src="script.js" defer></script>   <!-- JavaScript 파일 링크 -->
 </head>
 <body>
     <div>
         <h1>Welcome to My Site</h1>
-        <a href="/about.html">About Me</a>
+        <a href="about.html">About Me</a>  <!-- About Me 링크 -->
     </div>
 </body>
 </html>
-
-<head>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-</head>
